avançando mais um pouco
tudo que fiz até então

--- a/conceitos básicos/Estruturas e agrupamentos de texto.html
+++ b/conceitos básicos/Estruturas e agrupamentos de texto.html
@@ -50,5 +50,24 @@
     <span>Agrupa parte do texto para aplicar estilo via CSS</span>
 
     <p>Para mostrar tags no site: &lt;p&gt; e &lt;/p&gt;</p>
+
+    <p>
+        Simbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &delta;
+        &Delta;
+        &uarr;
+        E por aí vai, sempre começando com um & e terminando com um ;
+    </p>
+
+    <p>
+        Para colocar emojis pressione a tecla windows junto e em seguida a tecla ponto: 😊
+    </p>
 </body>
 </html>
