tome le mais um commit
tudo o que fiz

--- a/conceitos básicos/Estruturas e agrupamentos de texto.html
+++ b/conceitos básicos/Estruturas e agrupamentos de texto.html
@@ -13,9 +13,11 @@
     <p>
         Podemos adicionar outras tags especificas para formatação e edição de texto:
     
-        <b>Esse cara deixa em negrito.</b>
+        <b>Esse cara deixa em negrito.</b> <!--Esta tag está obsoleta, prefira um strong-->
 
-        <i>Esse deixa em italico.</i>
+        <strong>Esse cara deixa em negrito.</strong>
+
+        <i>Esse deixa em italico.</i><!--ainda não está obsoleto, mas prefira o em que possui semantica, prefira todas as tags com semantica em html5-->
 
         <u>Esse sublinha.</u>
 
@@ -26,7 +28,7 @@
 
         <del>Texto riscado.</del>
 
-        <ins>Negrito com ênfase semântica.</ins>
+        <ins>Negrito com ênfase semântica.</ins><!--Esta tag indica texto inserido, prefira ins ao invez de u-->
 
         <em>Itálico com ênfase semântica.</em>
 
@@ -68,6 +70,12 @@
 
     <p>
         Para colocar emojis pressione a tecla windows junto e em seguida a tecla ponto: 😊
+    </p>
+
+    <h1>Texto marcado</h1>
+
+    <p>
+        Podemos criar também um texto marcado usando a tag <mark>Marcou!</mark>
     </p>
 </body>
 </html>
