Revise video hosting and iframe explanations
Updated video hosting information and iframe usage details.

--- a/conceitos básicos/videos.html
+++ b/conceitos básicos/videos.html
@@ -11,14 +11,14 @@
     </H1>
 
     <p>
-        Este video está hospedado no meu próprio servidor.
+        Este video está hospedado no meu computador.
     </p>
 
     <!--Tive que usar essa imagem porque por algum motivo os servidores do canva e do pexels estavam fora do ar.-->
     <video width="500" poster="img-dinamico/Pequeno.png"  controls>
             <source src="videos/14682999_3840_2160_30fps.mp4" type="video/mp4"> 
 
-            <source src="videos/14682999_3840_2160_30fps.m4v" type="video/mp4"> 
+            <source src="videos/14682999_3840_2160_30fps.m4v" type="video/mp4"> <!--Aqui é onde estária o video, porém, não deu pra subir a pasta videos, devido ao gtihub ter um limite de até 100 mb.-->
 
             <source src="videos/14682999_3840_2160_30fps.webm" type="video/webm"> 
 
@@ -91,4 +91,5 @@
     Sempre use sandbox se você não confiar no conteúdo carregado.-->
 
 </body>
+
 </html>
