--- a/conceitos intermediários/como harmonizar cores.html
+++ b/conceitos intermediários/como harmonizar cores.html
@@ -67,5 +67,7 @@
         <!--Dica sobre monocromia: União de tonalidades diferentes de uma mesma cor.-->
 
         <!--Além destes conceitos temos diversos outros recomendado estudar mais sobre isto depois.-->
+
+        <!--alguns sites que ajudam a ver paletas de cores são o Adobe Color, o paletton e o coolors-->
 </body>
 </html>
