--- a/conceitos intermediários/trabalhando com cores/exemplo pratico.html
+++ b/conceitos intermediários/trabalhando com cores/exemplo pratico.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de Exemplo</title>
-    <link rel="stylesheet" href="exemplo-pratico.css">
+    <link rel="stylesheet" href="exemplo-pratico(box-shadow e text-shadow).css">
 </head>
 <body>
     <main><!--Não se atente sobre main ainda, veremos mais a frente.-->
