--- a/conceitos intermediários/desafio/android.html
+++ b/conceitos intermediários/desafio/android.html
@@ -3,20 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Como surgiu o mascote do android?</title>
+
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bruno+Ace+SC&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
         <h1>Curiosidades de tecnologia</h1>
-    </header>
-    <nav>
+
+        <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
         <a href="#">Fala conosco</a>
     </nav>
+    </header>
+    
     <main>
         <article>
             <h2>História do Mascote do Android:</h2>
@@ -31,7 +41,11 @@
                 A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/release/inkscape-1.4.2/windows/64-bit/msi/dl/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
             </p>
 
-            <img src="imagens/dan-droids.png" alt="Primeiro mascote do android.">
+            <picture>
+                <source media="(max-width: 600px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+
+                <img src="imagens/dan-droids.png" alt="Primeiro mascote do android.">
+            </picture>
 
             <p>
                 Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.
@@ -43,7 +57,11 @@
                 A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
             </p>
 
-            <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid.">
+            <picture>
+                <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg" type="image/png">
+
+                <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid.">
+            </picture>
 
             <p>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do <strong>Android</strong>.
