--- a/conceitos intermediários/desafio/android.html
+++ b/conceitos intermediários/desafio/android.html
@@ -19,11 +19,15 @@
     <header>
         <h1>Curiosidades de tecnologia</h1>
 
+        <p>
+            Tudo que você sempre quis saber sobre tecnologia em um só lugar
+        </p>
+
         <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
-        <a href="#">Fala conosco</a>
+        <a href="#">Fale conosco</a>
     </nav>
     </header>
     
@@ -67,13 +71,17 @@
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do <strong>Android</strong>.
             </p>
 
-            <img src="imagens/bugdroid.png" alt="Bugdroid.">
+            <picture>
+                <img id="Diferentao" src="imagens/bugdroid.png" alt="Bugdroid.">
+            </picture>
 
             <p>
                 A principal inspiração para os traços do novo <strong>Bugdroid </strong>veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
             </p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=QNRXk_HOZ8_UWZPx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div id="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=QNRXk_HOZ8_UWZPx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
             <aside>
                 <h3> Quer aprender mais?</h3>
