--- a/conceitos intermediarios part2(modulo3)/tabelas/tabela 2.html
+++ b/conceitos intermediarios part2(modulo3)/tabelas/tabela 2.html
@@ -95,6 +95,7 @@
                     <th scope="row">Total de habitantes</th>
                     <td></td>
                         <td>70.57 milhões</td>
+                        <!--Perceba que eu tive que criar um td vazio pra fazer o o total ficar alinhado com os números de habitantes, porém existe uma técnica bem simples para resolver isso, veremos no tabela 3 onde vamos tratar de celulas.-->
                 </tr>
             </tfoot>
         </table>
