--- a/conceitos um pouco avançados/iframes/iframe conceito.html
+++ b/conceitos um pouco avançados/iframes/iframe conceito.html
@@ -69,7 +69,9 @@
 
             allowfullscreen → permite tela cheia
 
-            loading="lazy" → carrega só quando aparecer na tela-->
+            loading="lazy" → carrega só quando aparecer na tela
+            
+        OBS: não use partes muito importantes dentro do site em um iframe, pois a propria google afirma que isso dificuta os mecanismos do navegador compreender o conteúdo do site.-->
         <p>
             <iframe src="https://www.cursoemvideo.com" width="400px" height="400px"></iframe>
             <!--Pode se personalizar a bordar usando frameborder ou usando css do mesmo modo width e height, só estou demonstrando que existem esses valores dentro do iframe.-->
