--- a/conceitos um pouco avançados/media query(desafio e conceito)/desafio/index.html
+++ b/conceitos um pouco avançados/media query(desafio e conceito)/desafio/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio - Media Query</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" /><!--Este é um link gerado pelo google font que da acesso a icones-->
+
     <link rel="stylesheet" href="style-all.css">
+
+    <link rel="stylesheet" href="style-medi-query.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
+       <span id="IconSymbol" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+        </span><!--Usando o google fonts podemos pegar icones e adicionar em nossos sites-->
         <menu>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -32,5 +40,15 @@
             </p>
         </article>
     </main>
+    <script>
+        function clickMenu(){
+            let menu = document.querySelector("header menu");
+            if(menu.style.display === "block"){
+                menu.style.display = "none";
+            }else{
+                menu.style.display = "block";
+            }
+        }
+    </script>
 </body>
 </html>
