--- a/conceitos avançados(flexbox)/flexbox/menu-flex-box e media query/menu flex-box.html
+++ b/conceitos avançados(flexbox)/flexbox/menu-flex-box e media query/menu flex-box.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu usando flex-box</title>
+    <link rel="stylesheet" href="mobile.css">
     <style>
         *{
             margin: 0px;
@@ -21,12 +22,34 @@
             background-color: gray;
             color: white;
             padding: 10px;
+
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+            align-items: center;
         }
         header > h1{
-            border: 1px dotted black;
+            /*border: 1px dotted #000;*/
+            flex: 0 0 200px;
         }
         header > nav{
-            border: 1px dotted #000;
+            /*border: 1px dotted #000;*/
+            display: flex;
+            flex-flow: row wrap;
+        }
+        header > nav > a{
+            background-color: black;
+            color: white;
+            padding: 10px;
+            margin: 5px;
+            border-radius: 5px;
+            text-decoration: none;
+            text-align: center;
+            transition-duration: 0.5s;
+        }
+        header > nav > a:hover{
+            background-color: white;
+            color: black;
         }
         main{
             background-color: white;
