projeto-final part2
tudo o que fiz

--- a/Proeto-Final/projeto-portfolio/index.html
+++ b/Proeto-Final/projeto-portfolio/index.html
@@ -35,8 +35,27 @@
                     <a href="https://www.instagram.com/jonh__peter_/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
                 </div>
         </section>
-        <section id="detalhes">
+        <section id="Detalhes">
+            <article id="Video">
+                <h2><i class="fa-solid fa-handshake"></i> Deixe-me apresentar</h2>
+                <div id="Video-Container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vl0eatPehLs?si=QgV_ONM-fy5m_pja" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </article>
+            <article id="Skills">
+                <h2><i class="fa-solid fa-brain"></i> Minhas Skills</h2>
 
+            </article>
+            <article id="Formacao">
+                <h2><i class="fa-solid fa-user-graduate"></i> Minha Formação</h2>
+
+
+            </article>
+            <article id="Projetos">
+                <h2><i class="fa-solid fa-code-branch"></i> Meus Projetos</h2>
+
+
+            </article>
         </section>
     </main>
     <footer>
